<?php

declare(strict_types=1);

namespace App\Entity;

use App\Repository\ReportRepository;
use DateTimeImmutable;
use Doctrine\DBAL\Types\Types;
use Doctrine\ORM\Mapping as ORM;
use Symfony\Component\Serializer\Annotation\Groups;

#[ORM\Entity(repositoryClass: ReportRepository::class)]
#[ORM\Table(name: 'reports')]
#[ORM\HasLifecycleCallbacks]
class Report {
    #[ORM\Id]
    #[ORM\GeneratedValue]
    #[ORM\Column]
    #[Groups(['report:read'])]
    private ?int $id = null;

    #[ORM\ManyToOne(targetEntity: User::class)]
    #[ORM\JoinColumn(name: 'user_id', referencedColumnName: 'id', nullable: false)]
    private User $user;

    #[ORM\Column(length: 50)]
    #[Groups(['report:read'])]
    private string $reportType;

    #[ORM\Column(length: 20)]
    #[Groups(['report:read'])]
    private string $format;

    /**
     * Filters applied to the report.
     *
     * @var array<string, mixed>
     */
    #[ORM\Column(type: Types::JSON)]
    #[Groups(['report:read'])]
    private array $filters = [];

    #[ORM\Column(length: 20)]
    #[Groups(['report:read'])]
    private string $status = 'pending'; // pending, processing, completed, failed

    #[ORM\Column(length: 255, nullable: true)]
    #[Groups(['report:read'])]
    private ?string $fileName = null;

    #[ORM\Column(type: Types::TEXT, nullable: true)]
    #[Groups(['report:read'])]
    private ?string $errorMessage = null;

    #[ORM\Column]
    #[Groups(['report:read'])]
    private DateTimeImmutable $createdAt;

    #[ORM\Column(nullable: true)]
    #[Groups(['report:read'])]
    private ?DateTimeImmutable $completedAt = null;

    public function __construct() {
        $this->createdAt = new DateTimeImmutable();
    }

    #[ORM\PrePersist]
    public function onPrePersist(): void {
        $this->createdAt = new DateTimeImmutable();
    }

    public function getId(): ?int {
        return $this->id;
    }

    public function getUser(): User {
        return $this->user;
    }

    public function setUser(User $user): self {
        $this->user = $user;

        return $this;
    }

    public function getReportType(): string {
        return $this->reportType;
    }

    public function setReportType(string $reportType): self {
        $this->reportType = $reportType;

        return $this;
    }

    public function getFormat(): string {
        return $this->format;
    }

    public function setFormat(string $format): self {
        $this->format = $format;

        return $this;
    }

    /**
     * @return array<string, mixed>
     */
    public function getFilters(): array {
        return $this->filters;
    }

    /**
     * @param array<string, mixed> $filters
     */
    public function setFilters(array $filters): self {
        $this->filters = $filters;

        return $this;
    }

    public function getStatus(): string {
        return $this->status;
    }

    public function setStatus(string $status): self {
        $this->status = $status;

        return $this;
    }

    public function getFileName(): ?string {
        return $this->fileName;
    }

    public function setFileName(?string $fileName): self {
        $this->fileName = $fileName;

        return $this;
    }

    public function getErrorMessage(): ?string {
        return $this->errorMessage;
    }

    public function setErrorMessage(?string $errorMessage): self {
        $this->errorMessage = $errorMessage;

        return $this;
    }

    public function getCreatedAt(): DateTimeImmutable {
        return $this->createdAt;
    }

    public function getCompletedAt(): ?DateTimeImmutable {
        return $this->completedAt;
    }

    public function setCompletedAt(?DateTimeImmutable $completedAt): self {
        $this->completedAt = $completedAt;

        return $this;
    }

    public function isCompleted(): bool {
        return $this->status === 'completed';
    }

    public function isFailed(): bool {
        return $this->status === 'failed';
    }

    public function isPending(): bool {
        return $this->status === 'pending';
    }

    public function isProcessing(): bool {
        return $this->status === 'processing';
    }
}
